--- a/references-2.bib
+++ b/references-2.bib
@@ -22,3 +22,9 @@
     language = {en},
     author = {Boehm, Eduard and Carril, Álvaro},
 }
+@article{abaluck_insurance_nodate,
+    title = {Insurance with {Multiple} {Actors}},
+    abstract = {In most insurance contracts, multiple parties jointly determine expenditures: patients and doctors in health insurance, drivers and mechanics in auto insurance, or homeowners and contractors in property insurance, among others. In such settings, we analyze how an insurer or social planner divides cost-sharing between risk-averse consumers (e.g. patients) and firms (e.g. doctors). Consumer cost-sharing is needed for two purposes. First, controlling “extensive margin” moral hazard beyond the direct reach of firms, such as the choice of whether to see a doctor. Second, as a second-best solution to contracting frictions, such as asymmetric information about doctor effort. Firm cost-sharing otherwise achieves first-best outcomes. As firm market power increases, the optimal firm contract takes an especially simple form: firm cost-sharing is linear and inversely proportional to the relative impact of consumer and firm cost-sharing on expenditures. We estimate this parameter for drugs in medicare: a dollar of physician paperwork costs is 50x more impactful than a dollar of consumer cost-sharing, implying that insurers should use small physician penalties as the primary means of cost-control.},
+    language = {en},
+    author = {Abaluck, Jason and Sarig, Oren and Song, Jintaek},
+}
