--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,150 @@
 
+@article{abaluck_when_2023,
+	title = {When {Less} is {More}: {Improving} {Choices} in {Health} {Insurance} {Markets}},
+	volume = {90},
+	issn = {0034-6527},
+	shorttitle = {When {Less} is {More}},
+	url = {https://doi.org/10.1093/restud/rdac050},
+	doi = {10.1093/restud/rdac050},
+	abstract = {We study the impact of changing choice set size on the quality of choices in health insurance markets. Using novel data on enrolment and medical claims for school district employees in the state of Oregon, we document that the average employee could save \$600 by switching to a lower cost plan. Structural modelling reveals large “choice inconsistencies” such as non-equalization of the dollar spent on premiums and out of pocket, and a novel form of “approximate inertia” where enrolees are excessively likely to switch to other plans that are close to the current plan on the plan design spreadsheet. Variation in the number of plan choices across districts and over time shows that enrolees make lower-cost choices when the choice set is smaller. We show that a curated restriction of choice set size improves choices more than the best available information intervention, partly because approximate inertia lowers gains from new information. We explicitly test and reject the assumption that this is because individuals choose worse from larger choice sets, or “choice overload”. Rather, we show that this feature arises from the fact that larger choice sets feature worse choices on average that are not offset by individual re-optimization.},
+	number = {3},
+	urldate = {2025-10-13},
+	journal = {The Review of Economic Studies},
+	author = {Abaluck, Jason and Gruber, Jonathan},
+	month = may,
+	year = {2023},
+	pages = {1011--1040},
+}
+
+@article{alcalde_intermediary_2021,
+	title = {Intermediary {Commissions} and price competition in a {Regulated} {Market} with {Heterogeneous} {Customers}},
+	abstract = {Besides its eﬀect on customers’ choices, trust in the intermediaries’ expertise also aﬀects ﬁrms’ market power and equilibrium prices. Customers who base their decisions on intermediaries’ recommendations are less sensitive to price changes. Our model shows that prices may move in the opposite direction to the intermediaries’ bias. When intermediaries are cheaper and less biased, more customers follow their advice, making demand less elastic. This change induces ﬁrms to increase prices, producing nontrivial eﬀects on welfare. Evidence from a policy reform in Chile’s retirement market is broadly consistent with these predictions and suggests that demands respond to commission changes.},
+	language = {en},
+	author = {Alcalde, Pilar and Vial, Bernardita},
+	year = {2021},
+}
+
+@article{tebaldi_estimating_2025,
+	title = {Estimating {Equilibrium} in {Health} {Insurance} {Exchanges}: {Price} {Competition} and {Subsidy} {Design} under the {ACA}},
+	volume = {92},
+	copyright = {https://academic.oup.com/pages/standard-publication-reuse-rights},
+	issn = {0034-6527, 1467-937X},
+	shorttitle = {Estimating {Equilibrium} in {Health} {Insurance} {Exchanges}},
+	url = {https://academic.oup.com/restud/article/92/1/586/7612959},
+	doi = {10.1093/restud/rdae020},
+	abstract = {Regulations to design private yet publicly sponsored health insurance markets are increasingly adopted in many OECD countries. Here I combine data and economic theory to analyse the interaction between insurers’ competition and the design of premium subsidies in determining equilibrium outcomes. My empirical model includes adverse selection, rich heterogeneity in preferences for vertically and horizontally differentiated plans and accommodates alternative assumptions on pricing conduct. In the context of the Affordable Care Act in the U.S., I estimate the joint distribution of preferences and expected cost using Californian administrative records on 3.4 million plan choices between 2014 and 2017, combined with plan and survey data on medical claims. An empirical horse race between conduct assumptions favours oligopoly pricing over perfect competition. Considering alternative subsidy designs shows that, in equilibrium, shifting subsidy generosity toward the “young invincibles” would lower premiums for all enrolees while increasing enrolment and proﬁts.},
+	language = {en},
+	number = {1},
+	urldate = {2025-10-13},
+	journal = {Review of Economic Studies},
+	author = {Tebaldi, Pietro},
+	month = jan,
+	year = {2025},
+	pages = {586--620},
+}
+
+@article{doraszelski_just_2018,
+	title = {Just {Starting} {Out}: {Learning} and {Equilibrium} in a {New} {Market}},
+	volume = {108},
+	issn = {0002-8282},
+	shorttitle = {Just {Starting} {Out}},
+	url = {https://pubs.aeaweb.org/doi/10.1257/aer.20160177},
+	doi = {10.1257/aer.20160177},
+	abstract = {We document the evolution of the new market for frequency response within the UK electricity system over a six-year period. Firms competed in price while facing considerable initial uncertainty about demand and rival behavior. We show that prices stabilized over time, converging to a rest point that is consistent with equilibrium play. We draw on models of fictitious play and adaptive learning to analyze how this convergence occurs and show that these models predict behavior better than an equilibrium model prior to convergence. (JEL D22, D83, L13, L94, L98)},
+	language = {en},
+	number = {3},
+	urldate = {2025-10-07},
+	journal = {American Economic Review},
+	author = {Doraszelski, Ulrich and Lewis, Gregory and Pakes, Ariel},
+	month = mar,
+	year = {2018},
+	pages = {565--615},
+}
+
+@article{cui_jmp_v3_nodate,
+	title = {{JMP}\_v3 (1)},
+	author = {Cui, Jingyi},
+}
+
+@article{levine_uk_nodate,
+	title = {{UK} {Pensions} {Got} {Margin} {Calls}},
+	language = {en},
+	author = {Levine, Matt},
+}
+
+@article{noauthor_reason_nodate,
+	title = {The reason the {BoE} is buying long gilts: an {LDI} blow-up},
+	language = {en},
+}
+
+@article{he_open_2023,
+	title = {Open banking: {Credit} market competition when borrowers own the data},
+	volume = {147},
+	issn = {0304405X},
+	shorttitle = {Open banking},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304405X22002471},
+	doi = {10.1016/j.jfineco.2022.12.003},
+	abstract = {Open banking facilitates data sharing consented to by customers who generate the data, with the regulatory goal of promoting competition between traditional banks and challenger ﬁntech entrants. We study lending market competition when sharing banks’ customer transaction data enables better borrower screening for ﬁntechs. Open banking promotes competition if it helps level the playing ﬁeld for all lenders in screening borrowers; however, if it over-empowers ﬁntechs, it can also hinder competition and leave all borrowers worse off. Due to the credit quality inference from borrowers’ sign-up decisions, this remains true even if borrowers have the control of whether to share their banking data. We also study extensions with ﬁntech aﬃnities and data sharing on borrower preferences. © 2022 Elsevier B.V. All rights reserved.},
+	language = {en},
+	number = {2},
+	urldate = {2025-10-03},
+	journal = {Journal of Financial Economics},
+	author = {He, Zhiguo and Huang, Jing and Zhou, Jidong},
+	month = feb,
+	year = {2023},
+	pages = {449--474},
+}
+
+@article{buchak_beyond_2024,
+	title = {Beyond the {Balance} {Sheet} {Model} of {Banking}: {Implications} for {Bank} {Regulation} and {Monetary} {Policy}},
+	volume = {132},
+	issn = {0022-3808, 1537-534X},
+	shorttitle = {Beyond the {Balance} {Sheet} {Model} of {Banking}},
+	url = {https://www.journals.uchicago.edu/doi/10.1086/726703},
+	doi = {10.1086/726703},
+	language = {en},
+	number = {2},
+	urldate = {2025-10-03},
+	journal = {Journal of Political Economy},
+	author = {Buchak, Greg and Matvos, Gregor and Piskorski, Tomasz and Seru, Amit},
+	month = feb,
+	year = {2024},
+	pages = {616--693},
+}
+
+@article{blickle_information-based_2025,
+	title = {Information-based pricing in specialized lending},
+	volume = {172},
+	issn = {0304405X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304405X25001436},
+	doi = {10.1016/j.jfineco.2025.104135},
+	abstract = {We study how competition between asymmetrically informed banks, one specialized and one nonspecialized, affects loan prices. Both banks possess ‘‘general’’ signals regarding the borrower’s quality, which they use to screen loans. The specialized bank also has access to a ‘‘specialized’’ signal on which it bases its loan pricing. This private information-based pricing makes the specialized bank bid more aggressively, mitigating the informational rent effect that gives it monopolistic power. Our findings explain why loans from specialized lenders feature lower interest rates and better ex post performance. Supporting empirical evidence emphasizes the role of specialized information in shaping credit market outcomes.},
+	language = {en},
+	urldate = {2025-10-03},
+	journal = {Journal of Financial Economics},
+	author = {Blickle, Kristian and He, Zhiguo and Huang, Jing and Parlatore, Cecilia},
+	month = oct,
+	year = {2025},
+	pages = {104135},
+}
+
+@article{babina_customer_2025,
+	title = {Customer data access and fintech entry: {Early} evidence from open banking},
+	volume = {169},
+	issn = {0304405X},
+	shorttitle = {Customer data access and fintech entry},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304405X24001739},
+	doi = {10.1016/j.jfineco.2024.103950},
+	abstract = {Open banking (OB) empowers bank customers to share their financial transaction data with fintechs and other banks. New cross-country data shows 49 countries adopted OB policies, privacy preferences predict policy adoption, and adoption spurs fintech entry. UK microdata shows that OB enables: (i) consumers to access both financial advice and credit; (ii) SMEs to establish new lending relationships. In a calibrated model, OB universally improves welfare through entry and product improvements when used for advice. When used for credit, OB promotes entry and competition by reducing adverse selection, but higher prices for costlier or privacy-conscious consumers partially offset these benefits.},
+	language = {en},
+	urldate = {2025-10-03},
+	journal = {Journal of Financial Economics},
+	author = {Babina, Tania and Bahaj, Saleem and Buchak, Greg and De Marco, Filippo and Foulis, Angus and Gornall, Will and Mazzola, Francesco and Yu, Tong},
+	month = jul,
+	year = {2025},
+	pages = {103950},
+}
+
 @article{spulber_bertrand_1995,
 	title = {Bertrand {Competition} when {Rivals}' {Costs} are {Unknown}},
 	volume = {43},
@@ -1586,13 +1732,6 @@
 	language = {es},
 	author = {Subsecretaria de Prevision Social},
 	year = {2021},
-}
-
-@article{alcalde_intermediary_nodate,
-	title = {Intermediary {Commissions} and price competition in a {Regulated} {Market} with {Heterogeneous} {Customers}},
-	abstract = {Besides its eﬀect on customers’ choices, trust in the intermediaries’ expertise also aﬀects ﬁrms’ market power and equilibrium prices. Customers who base their decisions on intermediaries’ recommendations are less sensitive to price changes. Our model shows that prices may move in the opposite direction to the intermediaries’ bias. When intermediaries are cheaper and less biased, more customers follow their advice, making demand less elastic. This change induces ﬁrms to increase prices, producing nontrivial eﬀects on welfare. Evidence from a policy reform in Chile’s retirement market is broadly consistent with these predictions and suggests that demands respond to commission changes.},
-	language = {en},
-	author = {Alcalde, Pilar and Vial, Bernardita},
 }
 
 @article{james_documento_nodate,
@@ -5866,7 +6005,7 @@ possible explanations. (JEL F15, N94, R12, R23)},
 	pages = {724--762},
 }
 
-@article{backus_common_2021-1,
+@article{backus_common_2021,
 	title = {Common {Ownership} in {America}: 1980–2017},
 	language = {en},
 	journal = {American Economic Journal: Microeconomics},
@@ -7078,7 +7217,7 @@ fiscal year.},
 	author = {Quiroz, Sebastián Castro and Altamirano, Felipe Castro and División, Subjefe and Chaparro, Luis Muñoz and Silva, Benjamín Leiva and Serra, Macarena Alliende},
 }
 
-@article{quiroz_mercado_nodate,
+@article{quiroz_mercado_nodate-1,
 	title = {Mercado sobre {Notarios} ({EM02}-2017)},
 	language = {es},
 	author = {Quiroz, Sebastián Castro and Altamirano, Felipe Castro and División, Subjefe and Jullian, Jacinta Diestre and Chaparro, Luis Muñoz},
@@ -7964,13 +8103,6 @@ and has welfare implications. For instance, although alternative dispatch platfo
 	month = dec,
 	year = {2014},
 	pages = {3841--3884},
-}
-
-@article{doraszelski_just_nodate,
-	title = {Just starting out: {Learning} and equilibrium in a new market},
-	abstract = {We document the evolution of the new market for frequency response within the UK electricity system over a six-year period. Firms competed in price while facing considerable initial uncertainty about demand and rival behavior. We show that over time prices stabilized, converging to a rest point that is consistent with equilibrium play. We draw on models of ﬁctitious play and adaptive learning to analyze how this convergence occurs and show that these models predict behavior better than an equilibrium model prior to convergence.},
-	language = {en},
-	author = {Doraszelski, Ulrich},
 }
 
 @article{hummels_nature_2001,
